long overflowing names in Trending Tokens fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,7 @@ a {
 :root {
   --theme-color: #121212;
 }
+
+.overflow-break-word {
+  overflow-wrap: break-word !important;
+}
